--- a/HabitHolic/app/build.gradle
+++ b/HabitHolic/app/build.gradle
@@ -32,19 +32,70 @@ android {
     }
     buildFeatures {
         viewBinding true
+        compose = true
+    }
+    composeOptions {
+        /**
+         * Kotlin 호환성 map을 참고해서 버전을 맞춰 주어야 함
+         * https://developer.android.com/jetpack/androidx/releases/compose-kotlin?hl=ko
+         */
+        kotlinCompilerExtensionVersion = "1.4.0-alpha01"
     }
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.6.0'
-    implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    //implementation 'androidx.appcompat:appcompat:1.6.0'
+    //implementation 'com.google.android.material:material:1.8.0'
+    //implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    //implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
+    //implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    //implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    //implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+
+    def composeBom = platform('androidx.compose:compose-bom:2022.12.00')
+    implementation composeBom
+    androidTestImplementation composeBom
+
+    // Choose one of the following:
+    // Material Design 3
+    implementation 'androidx.compose.material3:material3'
+    // or Material Design 2
+    //implementation 'androidx.compose.material:material'
+    // or skip Material Design and build directly on top of foundational components
+    //implementation 'androidx.compose.foundation:foundation'
+    // or only import the main APIs for the underlying toolkit systems,
+    // such as input and measurement/layout
+    //implementation 'androidx.compose.ui:ui'
+
+    // Android Studio Preview support
+    implementation 'androidx.compose.ui:ui-tooling-preview'
+    debugImplementation 'androidx.compose.ui:ui-tooling'
+
+    // UI Tests
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
+    debugImplementation 'androidx.compose.ui:ui-test-manifest'
+
+    // Optional - Integration with activities
+    implementation 'androidx.activity:activity-compose:1.5.1'
+    // Optional - Integration with ViewModels
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
+    // Optional - Integration with LiveData
+    implementation 'androidx.compose.runtime:runtime-livedata'
+    // Optional - Integration with RxJava
+    implementation 'androidx.compose.runtime:runtime-rxjava2'
+
+    // Optional - Included automatically by material, only add when you need
+    // the icons but not the material library (e.g. when using Material3 or a
+    // custom design system based on Foundation)
+    //implementation 'androidx.compose.material:material-icons-core'
+    // Optional - Add full set of material icons
+    //implementation 'androidx.compose.material:material-icons-extended'
+    // Optional - Add window size utils
+    //implementation 'androidx.compose.material3:material3-window-size-class'
+
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
